fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,7 @@
   font-size: 0.3em;
   display: inline-block;
   text-align: center;
-  height: 300px;
+  height: 400px;
   line-height: 60px;
 }
 
